Test factoring related to the open api enums